v1.10.x/quick-start/index.mdx
---
title: Quickstart | OpenMetadata Quickstart Guide
description: Get started with your platform using step-by-step onboarding instructions for setup, integration, and key feature exploration.
slug: /quick-start
sidebarTitle: Overview
---

# Quickstart

## Getting Started with OpenMetadata

This section will guide you through the installation process and the initial steps for using OpenMetadata.

Before you proceed with the installation, you have the option to explore OpenMetadata’s features using the sandbox environment. This allows you to try out its capabilities before setting it up.

Get hands-on experience and discover how OpenMetadata can streamline your workflows by trying the sandbox environment today.

<CardGroup cols={1}>
<Card title="Try the OpenMetadata Sandbox" icon="arrow-up-right-from-square" href="/v1.10.x/quick-start/sandbox" horizontal>
Interact with a sample installation with 0 setup to explore our Discovery, Governance and Collaboration features.
</Card>
</CardGroup>

Additionally, you can explore the OpenMetadata by setting up one of the two approaches locally with your own customizations, allowing you to test and experiment with the features.

<CardGroup cols={2}>
<Card title="Try OpenMetadata in Docker" icon="party-horn" href="/v1.10.x/quick-start/local-docker-deployment" horizontal>
Get OpenMetadata up and running with docker in under 5 minutes!
</Card>
<Card title="Try OpenMetadata in Kubernetes" icon="party-horn" href="/v1.10.x/quick-start/local-kubernetes-deployment" horizontal>
Get OpenMetadata up and running with kubernetes in under 5 minutes!
</Card>
</CardGroup>

Set up and explore OpenMetadata's core features, from basic configuration to advanced functionalities, for a seamless onboarding experience.

<CardGroup cols={1}>
<Card title="Getting Started" icon="rocket" href="/v1.10.x/quick-start/getting-started">
Unlock metadata insights for informed business decisions.
</Card>
</CardGroup>
